@@ -42,6 +42,8 @@ for use in production.
   firejail's --output functionality.
 * (T86738, CVE-2020-25814) SECURITY: mediawiki.jqueryMsg: Sanitize URLs and
   'style' attribute.
+* (T115888, CVE-2020-25828) SECURITY: mediawiki.js: Escape HTML in
+  mw.message( ... ).parse().
 
 == MediaWiki 1.35.0-rc.3 ==
 
